+idle&ewt templates
